# haminfo

./: .gitignore  AGENTS.md  AUTHORS  AUTHORS.rst  CONTRIBUTING.rst  ChangeLog  LICENSE  Makefile  README.md  README.rst  ass.py  clean.sql  dev-requirements.txt  docker-compose.yml  log.py  opencode.json  opencode.json.bak  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  test_geo.py  tox.ini  usa.json  va.json
.cursor/rules/: aprsd.mdc  my-stack.mdc  workflowprefs.mdc
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build-container.yml  docker-image.yml
.specify/memory/: constitution.md
.superpowers/brainstorm/63850-1774668499/: .server-info  dashboard-layout.html  layout-options.html  map-page.html  sections.html  station-lookup.html  weather-page.html
dashboards/: README.md  aprs-packet-dashboard.json  request-dashboard.json  stations-dashboard.json  weather-reports-dashboard.json  weather-stations-dashboard.json  wx-request-dashboard.json
docker/: .dockerignore  .env.example  Dockerfile  Dockerfile-dashboard  Dockerfile-dev  Dockerfile-freethreaded  build.sh  buildkit.toml  docker-compose.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/adr/: 0001-aprsfi-error-handling.md
docs/specs/: 2026-03-28-dashboard-memcached-design.md
docs/superpowers/plans/: 2026-03-22-db-clone-command.md  2026-03-22-timescaledb-compression.md  2026-03-24-wx-history-api.md  2026-03-26-aprs-packet-hypertable.md  2026-03-27-aprs-dashboard.md  2026-03-27-parallel-mqtt-consumers.md  2026-03-29-continuous-aggregates.md  2026-03-29-map-tile-caching.md  2026-03-31-geographic-filtering.md  2026-03-31-state-weather-dashboard-plan.md  2026-04-04-aprs-packet-decoder.md
docs/superpowers/specs/: 002-geographic-filtering.md  2026-03-22-db-clone-command-design.md  2026-03-22-timescaledb-compression-design.md  2026-03-24-wx-history-api-design.md  2026-03-27-aprs-dashboard-design.md  2026-03-27-parallel-mqtt-consumers-design.md  2026-03-29-continuous-aggregates-design.md  2026-03-29-map-tile-caching-design.md  2026-03-31-state-weather-dashboard-design.md  2026-04-04-aprs-packet-decoder-design.md
etc/haminfo/: haminfo.conf.sample
haminfo/: __init__.py  cli.py  cli_helper.py  flask.py  generate_token.py  haminfo.py  lat_lon.py  load_repeaterbook.py  log.py  main.py  mapbox.py  mqtt_healthcheck.py  mqtt_injest.py  opts.py  spinner.py  trace.py  utils.py  wsgi.py
haminfo-dashboard/: README.md  pyproject.toml
haminfo-dashboard/src/haminfo_dashboard/: __init__.py  api.py  app.py  cache.py  cli.py  decoder.py  geo_cache.py  queries.py  routes.py  state_queries.py  station_cache.py  utils.py  websocket.py
haminfo-dashboard/src/haminfo_dashboard/templates/dashboard/: base.html  countries.html  country_detail.html  index.html  map.html  state_detail.html  states.html  station.html  weather.html
haminfo-dashboard/src/haminfo_dashboard/templates/dashboard/partials/: countries.html  country_stats.html  country_top_stations.html  decode_error.html  decode_result.html  packets_table.html  state_alerts.html  state_stations_table.html  state_summary.html  station_detail.html  station_not_found.html  stats_cards.html  top_stations.html  weather_grid.html  weather_reports_table.html
haminfo-dashboard/tests/: conftest.py  test_decoder.py  test_geo_cache.py  test_routes.py  test_state_queries.py  test_tile_cache.py  test_utils.py  test_websocket.py
haminfo/cmds/: db.py  fetch_repeaterbook.py  generate_token.py  init_db.py  mapbox.py  mcp.py  mqtt_healthcheck.py  mqtt_ingest.py  mqtt_injest.py  trip.py
haminfo/conf/: __init__.py  common.py  log.py  mqtt.py
haminfo/dashboard/: __init__.py  api.py  queries.py  routes.py  utils.py  websocket.py
haminfo/db/: README  alembic.ini  alembic_helpers.py  caching_query.py  clone.py  db.py  env.py  environment.py  migrate.py
haminfo/db/models/: __all_models.py  aprs_packet.py  db_session.py  modelbase.py  request.py  station.py  weather_report.py
haminfo/db/versions/: 0146a00337db_initial_creation.py  1f323c5a9860_add_weather_report_table.py  3a3e840c4d49_add_aprs_packet_table.py  51e19bb5a9d8_slim_down_aprs_packet_table.py  6c283c2e789f_add_wxrequest.py  (+13 more)
haminfo/log/: log.py
haminfo/mqtt/: __init__.py  filters.py  processors.py  thread.py
haminfo/threads/: __init__.py  keep_alive.py  my_thread.py
haminfo/utils/: __init__.py  sql_validator.py
rust-mqtt-ingest/: Cargo.toml  Dockerfile  README.md  config-prod.toml  config.toml  config.toml.example
rust-mqtt-ingest/src/: config.rs  db.rs  main.rs  mqtt.rs  packet.rs  stats.rs
scripts/: backfill_station_states.py  load_natural_earth.py  populate_country_codes.py
specs/001-aprs-position-reports/: data-model.md  plan.md  quickstart.md  research.md  tasks.md
tests/: __init__.py  conftest.py  test_aprs_position_query.py  test_aprsfi_compat.py  test_dashboard_api.py  test_dashboard_queries.py  test_dashboard_utils.py  test_db_clone.py  test_fetch_repeaterbook.py  test_flask_validation.py  test_haminfo.py  test_location_api.py  test_models.py  test_mqtt_config.py  test_mqtt_ingest_parallel.py  test_mqtt_thread.py  test_parallel_mqtt_integration.py  test_sql_validator.py  test_utils.py  test_wx_history.py
tools/: config-generator.conf
(+9 files in other folders)
