[metadata]
name = haminfo
long_description = file: README.rst
long_description_content_type = text/x-rst
url = http://haminfo.readthedocs.org
author = Walter A. Boring IV
author_email = something@somewhere.com
license = Apache
license_file = LICENSE
python_requires = >=3.6
classifier =
    License :: OSI Approved :: Apache Software License
    Topic :: Communications :: Ham Radio
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
description_file =
    README.rst
project_urls =
    Source=https://github.com/hemna/haminfo
    Tracker=https://github.com/hemna/haminfo/issues
summary = Ham info API

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    haminfo

[entry_points]
console_scripts =
    haminfo_load = haminfo.load_repeaterbook:main
    haminfo_mapbox = haminfo.mapbox:main
    haminfo_token = haminfo.generate_token:main
    haminfo_api = haminfo.flask:main
oslo.config.opts =
    haminfo = haminfo.opts:list_opts
oslo.config.opts.defaults =
    haminfo = haminfo.opts:set_external_library_defaults

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_sphinx]
upload-dir = docs/_build

[bdist_wheel]
universal = 1
