[project]
name = "haminfo-dashboard"
dynamic = ["version"]
description = "APRS-IS Network Statistics Dashboard for haminfo"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "Walter A. Boring IV", email = "waboring@hemna.com"},
]
keywords = ["ham radio", "aprs", "dashboard", "amateur radio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Ham Radio",
]

dependencies = [
    "flask>=3.0.0",
    "flask-socketio>=5.3.0",
    "python-socketio>=5.10.0",
    "gevent>=24.0.0",
    "gevent-websocket>=0.10.1",
    "gunicorn>=21.0.0",
    "haminfo",  # For DB models
    "pylibmc>=1.6.0",  # For memcached caching
    "reverse_geocoder>=1.5.1",  # Fast in-memory reverse geocoding
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
haminfo-dashboard = "haminfo_dashboard.cli:main"

[project.urls]
Homepage = "https://github.com/hemna/haminfo"
Repository = "https://github.com/hemna/haminfo"

[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
root = ".."
relative_to = "pyproject.toml"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
haminfo_dashboard = [
    "templates/**/*.html",
    "static/**/*",
]
